<resources>
    <string name="app_name">Mobile Learning</string>
    <string name="underline_app_name"><u>Mobile Learning</u></string>

    <string name="automatic_data">Automatic Data</string>
    <string name="permission_title">Grant Access</string>
    <string name="permission_detail">Give Music Player access to files</string>
    <string name="choose_the_song">Choose the song</string>
    <string name="edit_data">Edit Data</string>
    <string name="result_awesome">Result is awesome!</string>
    <string name="continue_and_learn">Continue and learn how to do</string>
    <string name="continue_and_update">Continue and learn how to update</string>
    <string name="continue_and_result">Continue and see the result</string>
    <string name="thank_you">Thank you, have fun</string>
    <string name="gm_finds_photos">GM Music Playlist automatically finds photos and genres of singers and albums and displays it.*   (*) Music information data should be in a proper format for this feature to work.</string>
    <string name="swap_to_the_tab">Swap to the songs tab and touch the (⋮) sign which located at every songs right side , and choose Update Data</string>
    <string name="update_easily">You can update Song/Singer Name, Album and Genre data easily</string>
    <string name="after_updating">After updating data album cover, wiki information of artist and genre screens looks brilliant, don\'t forget to do this process for the other songs of you</string>

    <string name="back_btn">НАЗАД</string>
    <string name="next_btn">ДАЛЕЕ</string>
    <string name="start_btn">НАЧАТЬ РАБОТУ</string>

    <string name="error_sign_in">Ошибка входа</string>
    <string name="hint_email">Почта</string>
    <string name="hint_password">Пароль</string>
    <string name="btn_log_in">Войти</string>
    <string name="btn_link_to_register">Зарегистрироваться</string>
    <string name="text_register">Нет аккаунта?</string>
    <string name="btn_link_to_reset_password">Забыли пароль?</string>
    <string name="btn_sign_up">Зарегистрироваться</string>
    <string name="hint_first_name">Имя</string>
    <string name="hint_last_name">Фамилия</string>
    <string name="toolbar_title">Toolbar Title</string>

    <string-array name="group_list">
        <item>Номер группы</item>
        <item>11–601</item>
        <item>11–602</item>
        <item>11–603</item>
        <item>11–604</item>
        <item>11–605</item>
        <item>11–606</item>
        <item>11–607</item>
        <item>11–608</item>
    </string-array>

    <integer name="card_flip_duration_full">1000</integer>
    <integer name="card_flip_duration_half">500</integer>

    <string name="error_email">Введите электронную почту!</string>
    <string name="error_pass">Введите пароль!</string>
    <string name="error_pass_length">Пароль слишком короткий, введите минимум 6 символов!</string>
    <string name="status_registration_succeeded">Регистрация прошла успешно</string>
    <string name="status_log_in_succeeded">Вход выполнен успешно</string>
    <string name="btn_to_reset_password">Сбросить пароль</string>
    <string name="reset_password_complete_msg">Сообщение отправлено на почту!</string>
    <string name="error">Ошибка</string>
    <string name="reset_your_password">Сброс пароля</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_study">Study</string>
    <string name="nav_group">Group</string>
    <string name="edit_name">Редактировать</string>
    <string name="log_out">Выйти</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_statistics">Моя статистика</string>
    <string name="title_activity_homework">HomeworkActivity</string>
    <string name="add">Добавить</string>
    <string name="title_activity_add_homework">AddHomeworkActivity</string>
    <string name="confirm">Confirm</string>
    <string name="enter_name_subj">Введите название предмета</string>
    <string name="title_activity_details_homework">DetailsHomeworkActivity</string>

    <string name="title_description">Описание:</string>
    <string name="title_activity_finish_homework">FinishHomeworkActivity</string>
    <string name="save">Сохранить</string>
    <string name="no_internet">Нет подключения к интернету</string>
    <string name="title_activity_student_progress">StudentProgressActivity</string>

</resources>
