<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/reset_your_password"
        android:textColor="@android:color/black"
        android:textSize="22sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="@color/colorGrey" />

    <EditText
        android:id="@+id/edt_reset_pass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLines="1" />

    <Button
        android:id="@+id/btn_reset_pass"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_style"
        android:padding="8dp"
        android:text="@string/btn_to_reset_password"
        android:textColor="@android:color/white" />
</LinearLayout>