<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/linear_layout_container_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_email_outline_black_24dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:drawablePadding="9dp"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <!--<android.support.design.widget.TextInputLayout
            android:id="@+id/ti_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>-->

        <Button
            android:id="@+id/btn_to_sign_in"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_style"
            android:drawableEnd="@drawable/ic_send_black_24dp"
            android:text="@string/btn_log_in"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/btn_link_to_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/btn_link_to_reset_password"
            android:textColor="@color/colorGrey"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_text_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_register"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/btn_link_to_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="true"
            android:textColor="@color/colorGrey"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>

